use JSP to return the @RequestMapping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#src/main/resources/META-INF/resources/WEB-INF/jsp/sayHello.jsp
+#mvc already knows about src/main/resources/META-INF/resources
+#view resolver
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+logging.level.org.springframework=debug
