use model to pass from LoginController to jsp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@
 #view resolver
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-logging.level.org.springframework=debug
+logging.level.org.springframework=info
+logging.level.com.springboot.myfirstwebapp=info 
+#if you don't want the debug to be printed use info instead
