use model to pass from LoginController to jsp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #src/main/resources/META-INF/resources/WEB-INF/jsp/sayHello.jsp
 #mvc already knows about src/main/resources/META-INF/resources
-#view resolver
+#view resolver can map login to this specific JSP name
+# /WEB-INF/jsp/login.jsp => logic implemented in a place called view resolver
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
