Implement Update Todo - 1 - Save changes to Todo List using ToDoController.java Add Target Date Field to Todo Page in the toDo.jsp file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
 logging.level.com.springboot.myfirstwebapp=info 
 #if you don't want the debug to be printed use info instead
+
+spring.mvc.format.date=yyyy-MM-dd
