Configuring Spring Security to Get H2-console Working in SpringSecurityConfiguration.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ logging.level.com.springboot.myfirstwebapp=info
 #if you don't want the debug to be printed use info instead
 
 spring.mvc.format.date=yyyy-MM-dd
+
+#To make the h2 database url constant
+spring.datasource.url=jdbc:h2:mem:testdb
