--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,14 +15,20 @@ spring.mvc.format.date=yyyy-MM-dd
 #spring.jpa.defer-datasource-initialization=true
 #yet: spring.jpa.defer-datasource-initialization=true
 
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=TRUE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=TRUE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#
+#spring.jpa.defer-datasource-initialization=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.show-sql=true
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/todo
+spring.datasource.username=todo-user
+spring.datasource.password=dummytodo
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
