Added space to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 #mvc already knows about src/main/resources/META-INF/resources
 #view resolver can map login to this specific JSP name
 # /WEB-INF/jsp/login.jsp => logic implemented in a place called view resolver
+
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
@@ -28,7 +29,9 @@ spring.mvc.format.date=yyyy-MM-dd
 #spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/todo
-spring.datasource.username=todo-user
+spring.datasource.username=todouser
 spring.datasource.password=dummytodo
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.card.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
